# Myriad-Stars-in-the-Sky

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml
apps/api/src/: config.py  db.py  llm.py  main.py  models.py  routes_agent.py  routes_community.py  routes_evaluator.py  routes_knowledge.py  routes_skills.py
apps/mobile/: App.tsx  package.json
apps/web/: package.json  tsconfig.json
apps/web/src/app/: StarConsole.tsx  page.tsx
docs/: api-design.md  database-schema.md  scaffolding.md
infra/: docker-compose.yml
scripts/train/: star_trainer.py
